2005-05-06  Not Zed  <NotZed@Ximian.com>

	* Makefile.am: 
	* org-gnome-mail-folder-unsubscribe.eplug.xml: s/.in/.xml/ & i18n.

2005-02-24  Björn Torkelsson  <torkel@acc.umu.se>

	* org-gnome-mail-folder-unsubscribe.eplug.in: Updated description.

2004-11-01  JP Rosevear  <jpr@novell.com>

	* Makefile.am: dist .eplug.in file

2004-10-28  Not Zed  <NotZed@Ximian.com>

	* org-gnome-mail-folder-unsubscribe.eplug.in: fix hook id
