@@ -1,16 +1,20 @@
 <?xml version="1.0"?>
 <e-plugin-list>
-  <e-plugin id="org.gnome.mail.folder.unsubscribe" 
-   type="shlib" domain="evolution" _name="Unsubscribe Folders"
-   location="@PLUGINDIR@/liborg-gnome-mail-folder-unsubscribe.so">
-    <_description>Allows unsubscribing of mail folders in the folder tree context menu.</_description>
-    <author name="Jeffrey Stedfast" email="fejj@novell.com"/>
-    <hook class="org.gnome.evolution.mail.popup:1.0">
-      <menu id="org.gnome.evolution.mail.foldertree.popup" target="folder">
-        <item type="item" path="20.emc.03" _label="_Unsubscribe"
-         activate="org_gnome_mail_folder_unsubscribe"
-         enable="delete" visible="delete"/>
-      </menu>
-    </hook>
-  </e-plugin>
+	<e-plugin
+		id="org.gnome.evolution.mail.folder.unsubscribe" 
+		type="shlib"
+		domain="@GETTEXT_PACKAGE@"
+		_name="Unsubscribe Folders"
+		location="@PLUGINDIR@/liborg-gnome-mail-folder-unsubscribe@SOEXT@">
+		<_description>Allows unsubscribing of mail folders in the folder tree context menu.</_description>
+		<author name="Jeffrey Stedfast" email="fejj@novell.com"/>
+
+		<hook class="org.gnome.evolution.mail.popup:1.0">
+			<menu id="org.gnome.evolution.mail.foldertree.popup" target="folder">
+				<item type="item" path="20.emc.03" _label="_Unsubscribe"
+					activate="org_gnome_mail_folder_unsubscribe"
+					enable="delete" visible="delete"/>
+			</menu>
+		</hook>
+	</e-plugin>
 </e-plugin-list>
