@@ -1,3 +1,12 @@
+2007-04-02  Sankar P  <psankar@novell.com>
+
+	* Committed on behalf of Gilles Dartiguelongue <dartigug@esiee.fr>
+
+	* org-gnome-mail-folder-unsubscribe.eplug.xml:
+	Cleanup. 
+	Fixes part of #301149
+
+
 2005-05-06  Not Zed  <NotZed@Ximian.com>
 
 	* Makefile.am: 
